Source/WebCore/Modules/indexeddb/IDBDatabase.h
@@ -123,6 +123,8 @@ private:
     Vector<RefPtr<Event> > m_enqueuedEvents;
 
     RefPtr<IDBDatabaseCallbacks> m_databaseCallbacks;
+
+    bool m_didSpamConsole;
 };
 
 } // namespace WebCore
